Example2/svc_front.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-py
spec:
  type: LoadBalancer
  selector:
    app: hello-py
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
