Example2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-hello-py
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - hello-py.com
    secretName: tls-secret
  rules:
  - host: hello-py.com
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-py
          servicePort: 80
